# bcov

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  install.sh
ext/cmdline/: cmdline.hpp
ext/gsl/: gsl-lite.hpp
ext/libelfin/elf/: data.hh  elf++.hh  elf.cc  mmap_loader.cc  to_string.cc
src/core/: BasicBlock.cpp  BasicBlock.hpp  CSInstWrapper.cpp  CSInstWrapper.hpp  Common.cpp  Common.hpp  Disassembler.cpp  Disassembler.hpp  FileLoader.cpp  FileLoader.hpp  Function.cpp  Function.hpp  FunctionBuilder.cpp  FunctionBuilder.hpp  MCInst.cpp  MCInst.hpp  Region.cpp  Region.hpp
src/dump/: patch.c  patch.h
src/dwarf/: Data.cpp  Data.hpp  EhFrame.cpp  EhFrame.hpp  LEB128.hpp  PrettyPrint.cpp  PrettyPrint.hpp
src/elf/: ElfExtender.cpp  ElfExtender.hpp  ElfModule.cpp  ElfModule.hpp  ElfParser.cpp  ElfParser.hpp  ElfPatchManager.cpp  ElfPatchManager.hpp  Util.hpp
src/flax/: Emulator.cpp  Emulator.hpp  Flax.cpp  Flax.hpp
src/graph/: CFG.cpp  CFG.hpp  DirectedGraph.hpp  DominatorTree.cpp  DominatorTree.hpp  Dot.cpp  Dot.hpp  SuperBlock.cpp  SuperBlock.hpp
src/main/: main.cpp
src/util/: BcovConfig.cpp  BcovConfig.hpp  BcovConfigParser.cpp  BcovConfigParser.hpp  Demangler.cpp  Demangler.hpp  ElfData.hpp  FileUtil.hpp  Logging.cpp  Logging.hpp  ProgOptions.cpp  ProgOptions.hpp
src/x64/: Arch.cpp  Arch.hpp  Asm.cpp  Asm.hpp  Inst.cpp  Inst.hpp  JumpTabAnalyzer.cpp  JumpTabAnalyzer.hpp
tools/bcov-rt/: CMakeLists.txt  bcov-rt.c  bcov-rt.h
